# funny-whiteboard-paint

./: .gitignore  Change_mascot.md  README.md  index.html  package.json
.codex/plans/: c-5b283c31.md  c-b48c2f65.md  c-c944333d.md
.github/scripts/: prepare-windows-executable.ps1
.github/workflows/: ci.yml  release.yml
src/: main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
